--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
 
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>osu! Clone</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div id="menu">
+        <h1>osu! Clone</h1>
+        <button onclick="startGame()">Começar Jogo</button>
+    </div>
+    <div id="game" style="display: none;">
+        <canvas id="gameCanvas" width="800" height="600"></canvas>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
