--- a/index.html
+++ b/index.html
@@ -3,24 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Live Subscribers Comparison</title>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <title>Live YouTube Subscribers</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
+            background-color: #f4f4f4;
             margin: 20px;
         }
-        canvas {
-            max-width: 600px;
-            margin: auto;
+        table {
+            margin: 20px auto;
+            border-collapse: collapse;
+            width: 90%;
+            max-width: 1200px;
+        }
+        th, td {
+            border: 1px solid #ddd;
+            padding: 10px;
+            text-align: center;
+        }
+        th {
+            background-color: #f8c471;
+            color: white;
+        }
+        td:nth-child(1) {
+            font-weight: bold;
+        }
+        .highlight {
+            background-color: #ffeb3b;
         }
     </style>
 </head>
 <body>
-    <h1>Subscribers Comparison: Alanzoka vs PewDiePie</h1>
-    <canvas id="subscribersChart"></canvas>
-    <p>Atualizado a cada minuto.</p>
+    <h1>Live Subscribers Leaderboard</h1>
+    <table id="subscribersTable">
+        <thead>
+            <tr>
+                <th>Rank</th>
+                <th>Channel</th>
+                <th>Subscribers</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- Dados dinâmicos serão inseridos aqui -->
+        </tbody>
+    </table>
     <script src="script.js"></script>
 </body>
 </html>
