--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Live YouTube Subscribers</title>
+    <title>Simulated Subscribers Leaderboard</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -15,7 +15,7 @@
             margin: 20px auto;
             border-collapse: collapse;
             width: 90%;
-            max-width: 1200px;
+            max-width: 600px;
         }
         th, td {
             border: 1px solid #ddd;
@@ -29,13 +29,10 @@
         td:nth-child(1) {
             font-weight: bold;
         }
-        .highlight {
-            background-color: #ffeb3b;
-        }
     </style>
 </head>
 <body>
-    <h1>Live Subscribers Leaderboard</h1>
+    <h1>Simulated Subscribers Leaderboard</h1>
     <table id="subscribersTable">
         <thead>
             <tr>
