--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simulated Subscribers Leaderboard</title>
+    <title>Live Subscribers Leaderboard</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -32,7 +32,7 @@
     </style>
 </head>
 <body>
-    <h1>Simulated Subscribers Leaderboard</h1>
+    <h1>Live Subscribers Leaderboard</h1>
     <table id="subscribersTable">
         <thead>
             <tr>
