--- a/index.html
+++ b/index.html
@@ -3,48 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simulated Subscribers Leaderboard</title>
+    <title>Stay Still Game</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
             background-color: #f4f4f4;
-            margin: 20px;
+            margin: 0;
+            padding: 0;
         }
-        table {
-            margin: 20px auto;
-            border-collapse: collapse;
-            width: 90%;
-            max-width: 600px;
+        #game-container {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
-        th, td {
-            border: 1px solid #ddd;
-            padding: 10px;
-            text-align: center;
+        h1, p {
+            margin: 10px 0;
         }
-        th {
-            background-color: #f8c471;
-            color: white;
+        #timer {
+            font-size: 2em;
+            color: #2ecc71;
         }
-        td:nth-child(1) {
-            font-weight: bold;
+        #message {
+            font-size: 1.2em;
+            color: #e74c3c;
+            margin-top: 10px;
         }
     </style>
 </head>
 <body>
-    <h1>Simulated Subscribers Leaderboard</h1>
-    <table id="subscribersTable">
-        <thead>
-            <tr>
-                <th>Rank</th>
-                <th>Channel</th>
-                <th>Subscribers</th>
-            </tr>
-        </thead>
-        <tbody>
-            <!-- Dados dinâmicos serão inseridos aqui -->
-        </tbody>
-    </table>
+    <div id="game-container">
+        <h1>Stay Still Game</h1>
+        <p>Press <strong>Space</strong> to start the game.</p>
+        <p>Don't move the mouse!</p>
+        <div id="timer">0.00s</div>
+        <div id="message"></div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
