--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            background-color: #f4f4f4;
+            background-color: #1e1e2f; /* Fundo escuro */
+            color: #ffffff; /* Texto claro */
             margin: 0;
             padding: 0;
         }
@@ -19,16 +20,21 @@
             align-items: center;
             height: 100vh;
         }
-        h1, p {
+        h1 {
+            color: #f39c12; /* Título em laranja */
+        }
+        p {
             margin: 10px 0;
+            color: #dcdcdc; /* Texto secundário em cinza */
         }
         #timer {
-            font-size: 2em;
-            color: #2ecc71;
+            font-size: 3em;
+            font-weight: bold;
+            color: #2ecc71; /* Cronômetro verde */
         }
         #message {
             font-size: 1.2em;
-            color: #e74c3c;
+            color: #e74c3c; /* Mensagem de erro em vermelho */
             margin-top: 10px;
         }
     </style>
