--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stay Still Game</title>
+    <link href="https://fonts.googleapis.com/css2?family=Feather&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Feather', Arial, sans-serif; /* Define Feather como a fonte principal */
             text-align: center;
             background-color: #1e1e2f; /* Fundo escuro */
             color: #ffffff; /* Texto claro */
@@ -22,6 +23,7 @@
         }
         h1 {
             color: #f39c12; /* Título em laranja */
+            font-weight: bold; /* Força o estilo "bold" */
         }
         p {
             margin: 10px 0;
@@ -29,7 +31,7 @@
         }
         #timer {
             font-size: 3em;
-            font-weight: bold;
+            font-weight: bold; /* Estilo bold para destaque */
             color: #2ecc71; /* Cronômetro verde */
         }
         #message {
