--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stay Still Game</title>
+    <title>Não se mova!</title>
     <link href="https://fonts.googleapis.com/css2?family=Feather&display=swap" rel="stylesheet">
     <style>
         body {
@@ -43,9 +43,9 @@
 </head>
 <body>
     <div id="game-container">
-        <h1>Stay Still Game</h1>
-        <p>Press <strong>Space</strong> to start the game.</p>
-        <p>Don't move the mouse!</p>
+        <h1>Não se Mova!</h1>
+        <p>Pressione <strong>Space</strong> para iniciar o jogo</p>
+        <p>não mexa seu mouse!</p>
         <div id="timer">0.00s</div>
         <div id="message"></div>
     </div>
