--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
 </head>
 <body>
     <div id="ranking">
-        <h2>Top Players</h2>
+        <h2>Seus Recordes</h2>
         <ul id="ranking-list">
             <!-- Lista do ranking será atualizada aqui -->
         </ul>
     </div>
     <div id="game-container">
-        <h1>Stay Still Game</h1>
-        <p>Press <strong>Space</strong> to start the game.</p>
-        <p>Don't move the mouse!</p>
+        <h1>Apenas PARE!</h1>
+        <p>Pressione <strong>Space</strong> para iniciar o jogo</p>
+        <p>não mova o mouse!</p>
         <div id="timer">0.00s</div>
         <div id="message"></div>
     </div>
